Updated index.html with 8 videos and adjusted CSS styles

--- a/index.html
+++ b/index.html
@@ -12,58 +12,86 @@
         <!-- 论文标题 -->
         <h1>Semantically Aligned Video Inpainting through Dual-Path Attention and Multimodal Captioning</h1>
         <!-- 作者列表 -->
-        <p class="authors">Anonymous Authors ...</p>
+        <p class="authors">Anonymous Authors</p>
         <!-- 作者单位/机构 (可选) -->
 
     </header>
 
     <main>
         <!-- 摘要 -->
-        <section id="abstract">
+        <!-- <section id="abstract">
             <h2>Abstract</h2>
             <p>
                 在这里粘贴你的论文摘要。请保持简洁明了，突出研究内容和贡献。
                 在这里粘贴你的论文摘要。
                 在这里粘贴你的论文摘要。
             </p>
-        </section>
+        </section> -->
 
-        <hr> <!-- 分隔线 -->
+        <!-- <hr> 分隔线 -->
 
         <!-- 演示/概述 (Demo/Overview) -->
         <section id="demo">
-            <h2>Demo / Overview</h2>
-
-            <!-- 新增：视频容器，用于并排放置两个视频 -->
+            <h2>Demo</h2>
+            <p>
+                Our Inpainting Results.
+            </p>
+            <!-- 第一组视频：两个并排 -->
             <div class="video-gallery">
-                <!-- 第一个视频 -->
                 <video controls loop muted playsinline>
-                    <!-- 使用 <source> 标签指定视频文件路径和类型 -->
-                    <source src="SynC-Inpainter/videos/concat1/valid-sample-01.mp4" type="video/mp4">
-                    <!-- 如果有其他格式的视频文件（如 .webm），可以添加更多 <source> 标签 -->
-                    <!-- <source src="SynC-Inpainter/videos/video1.webm" type="video/webm"> -->
+                    <source src="videos\concat1\valid-sample-01.mp4" type="video/mp4">
                     您的浏览器不支持 HTML5 video 标签。
                 </video>
-
-                <!-- 第二个视频 -->
                 <video controls loop muted playsinline>
-                    <source src="SynC-Inpainter/videos/concat1/valid-sample-02.mp4" type="video/mp4">
-                    <!-- <source src="SynC-Inpainter/videos/video2.webm" type="video/webm"> -->
+                    <source src="videos\concat1\valid-sample-05.mp4" type="video/mp4">
                     您的浏览器不支持 HTML5 video 标签。
                 </video>
             </div>
-            <!-- 结束：视频容器 -->
 
-            <p>
-                对演示视频进行简要说明。例如：左侧视频展示了原始视频，右侧视频展示了我们的方法修复后的结果。
-            </p>
+            <!-- 第二组视频：两个并排 -->
+            <div class="video-gallery">
+                <video controls loop muted playsinline>
+                    <source src="videos\concat1\valid-sample-08.mp4" type="video/mp4">
+                    您的浏览器不支持 HTML5 video 标签。
+                </video>
+                <video controls loop muted playsinline>
+                    <source src="videos\concat1\valid-sample-14.mp4" type="video/mp4">
+                    您的浏览器不支持 HTML5 video 标签。
+                </video>
+            </div>
+
+            <!-- 第三组视频：两个并排 -->
+            <div class="video-gallery">
+                <video controls loop muted playsinline>
+                    <source src="videos\concat1\valid-sample-16.mp4" type="video/mp4">
+                    您的浏览器不支持 HTML5 video 标签。
+                </video>
+                <video controls loop muted playsinline>
+                    <source src="videos\concat1\valid-sample-28.mp4" type="video/mp4">
+                    您的浏览器不支持 HTML5 video 标签。
+                </video>
+            </div>
+
+            <!-- 第四组视频：两个并排 -->
+            <div class="video-gallery">
+                <video controls loop muted playsinline>
+                    <source src="videos\concat1\valid-sample-13.mp4" type="video/mp4">
+                    您的浏览器不支持 HTML5 video 标签。
+                </video>
+                <video controls loop muted playsinline>
+                    <source src="videos\concat1\valid-sample-34.mp4" type="video/mp4">
+                    您的浏览器不支持 HTML5 video 标签。
+                </video>
+            </div>
+
+            
         </section>
 
         <hr>
 
         <!-- 资源链接 -->
         <section id="resources">
-            <h2>Resources</h2>
+            <h2>Resources(Coming Soon)</h2>
             <ul>
                 <li><a href="path/to/your/paper.pdf" target="_blank">Paper PDF</a></li>
                 <li><a href="https://github.com/你的GitHub用户名/你的仓库名" target="_blank">Code (GitHub)</a></li>
@@ -81,35 +109,21 @@
             <h2>Citation (BibTeX)</h2>
             <p>如果你觉得我们的工作有帮助，请引用：</p>
             <pre><code>
-@article{你的BibTeXKey,
-  title={你的研究论文完整标题},
-  author={姓, 名 and 姓, 名 and ...},
-  journal={期刊或会议名称},
-  year={年份},
-  volume={卷号},
-  number={期号},
-  pages={页码},
-  publisher={出版社}
-}
+
             </code></pre>
         </section>
 
-        <hr>
+        <!-- <hr> -->
 
         <!-- 鸣谢 (Acknowledgments) -->
-        <section id="acknowledgments">
+        <!-- <section id="acknowledgments">
             <h2>Acknowledgments</h2>
             <p>在这里列出所有需要感谢的个人、机构或项目资助。</p>
         </section>
 
-        <hr>
+        <hr> -->
 
         <!-- 联系方式 (Contact) -->
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>如果你有任何问题，请联系：你的邮箱地址</p>
-            <!-- 或者提供其他联系方式 -->
-        </section>
 
     </main>
 
